[package]
name = "todorpc_client_quic"
version = "0.1.0"
authors = ["hjiayz <hjiayz@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.6.1"
futures = "0.3.5"
anyhow = "1.0.31"
todorpc = { path = "../todorpc" }
serde = "1.0.111"
bincode = "1.2.1"
log = "0.4.8"

[dependencies.tokio]
version = "0.2.21"
features = [
    'io-util',
    'sync',
    'stream',
    'rt-core',
    'dns',
    'tcp',
    'time',
]
