[package]
name = 'todorpc_client_quic'
version = '0.1.0'
authors = ['hjiayz <hjiayz@163.com>']
edition = '2018'

[dependencies]
quinn = "0.6.1"
futures = "0.3.5"
anyhow = "1.0.31"
serde = "1.0.114"
bincode = "1.3.1"
log = "0.4.8"

[dependencies.todorpc]
path = '../todorpc'

[dependencies.tokio]
version = "0.2.21"
features = [
    'io-util',
    'sync',
    'stream',
    'rt-core',
    'dns',
    'tcp',
    'time',
]
