[package]
name = 'todorpc_client_tcp'
version = '0.1.0'
authors = ['hjiayz <hjiayz@gmail.com>']
edition = '2018'
license = 'MIT OR Apache-2.0'

[dependencies]
futures = "0.3.5"
bincode = "1.2.1"
log = "0.4.8"

[dependencies.todorpc]
path = '../todorpc'

[dependencies.tokio]
version = "0.2.20"
features = [
    'io-util',
    'sync',
    'stream',
    'rt-core',
    'dns',
    'tcp',
    'time',
]
