[package]
name = "todorpc_server_quic"
version = "0.1.0"
authors = ["hjiayz <hjiayz@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.6.1"
futures = "0.3.5"
todorpc_server_core = { path = "../todorpc_server_core" }
tokio = "0.2.20"
anyhow = "1.0.28"
todorpc = { path = "../todorpc" }
log = "0.4.8"
