[package]
name = 'todorpc_server_quic'
version = '0.1.0'
authors = ['hjiayz <hjiayz@163.com>']
edition = '2018'

[dependencies]
quinn = "0.6.1"
futures = "0.3.5"
tokio = "0.2.21"
anyhow = "1.0.31"
log = "0.4.8"

[dependencies.todorpc_server_core]
path = '../todorpc_server_core'

[dependencies.todorpc]
path = '../todorpc'
