[package]
name = 'todorpc_server_tcp'
version = '0.1.0'
authors = ['hjiayz <hjiayz@gmail.com>']
edition = '2018'
license = 'MIT OR Apache-2.0'

[dependencies]
futures = "0.3.5"
log = "0.4.8"

[dependencies.todorpc_server_core]
path = '../todorpc_server_core/'

[dependencies.tokio]
version = "0.2.21"
features = [
    'tcp',
    'io-util',
    'sync',
    'stream',
    'rt-core',
]
