[package]
name = 'todorpc_web'
version = '0.1.0'
authors = ['hjiayz <hjiayz@gmail.com>']
edition = '2018'
license = 'MIT OR Apache-2.0'

[dependencies]
js-sys = "0.3.41"
futures = "0.3.5"
wasm-bindgen-futures = "0.4.14"
bincode = "1.3.1"
log = "0.4.8"

[dependencies.wasm-bindgen]
version = "0.2.64"
features = ['serde-serialize']

[dependencies.todorpc]
path = '../todorpc'

[dependencies.web-sys]
version = "0.3.41"
features = [
    'ErrorEvent',
    'MessageEvent',
    'WebSocket',
    'console',
    'CloseEvent',
    'BinaryType',
    'Window',
    'EventTarget',
]
