[package]
name = "server"
version = "0.1.0"
authors = ["hjiayz <hjiayz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todorpc_server_tcp = { path = '../../todorpc_server_tcp/' }
todorpc_server_websocket = { path = '../../todorpc_server_websocket/' }
todorpc = { path = '../../todorpc' }
tokio = { version = "0.2.20", features = ["io-util","sync","stream","rt-core","macros","time","fs"] }
serde = { version = "1.0.107", features = ["derive"] }
define = { path = '../define' }
native-tls = "0.2.4"
quinn = "0.6.1"
todorpc_server_quic = { path = "../../todorpc_server_quic" }
p12 = "0.1.4"
log = "0.4.8"
pretty_env_logger = "0.4.0"
