[package]
name = "tcpclient"
version = "0.1.0"
authors = ["hjiayz <hjiayz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todorpc_client_tcp = { path = './../../todorpc_client_tcp' }
todorpc = { path = './../../todorpc' }
serde = { version = "1.0.114", features = ["derive"] }
lazy_static = "1.4.0"
define = { path = "../define"}
tokio = { version = "0.2.21", features = ["io-util","sync","stream","rt-core","macros","time"] }
