[package]
name = "wsclient"
version = "0.1.0"
authors = ["hjiayz <hjiayz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
todorpc_web = { path = './../../todorpc_web' }
todorpc = { path = './../../todorpc' }
serde = { version= "1.0.106", features=["derive"]}
wasm-bindgen = "0.2.60"
web-sys = "0.3.36"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.37"
wasm-bindgen-futures = "0.4.10"
lazy_static = "1.4.0"
define = { path = "../define"}
futures = "0.3.4"
