[package]
name = 'wsclient'
version = '0.1.0'
authors = ['hjiayz <hjiayz@gmail.com>']
edition = '2018'
license = 'MIT OR Apache-2.0'

[lib]
crate-type = ['cdylib']

[dependencies]
wasm-bindgen = "0.2.64"
web-sys = "0.3.41"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.41"
wasm-bindgen-futures = "0.4.14"
lazy_static = "1.4.0"
futures = "0.3.5"
console_log = "0.2.0"
log = "0.4.8"

[dependencies.todorpc_web]
path = './../../todorpc_web'

[dependencies.todorpc]
path = './../../todorpc'

[dependencies.serde]
version = "1.0.114"
features = ['derive']

[dependencies.define]
path = '../define'
